--- a/angular/src/app/common/header/header.component.scss
+++ b/angular/src/app/common/header/header.component.scss
@@ -146,6 +146,7 @@ $animation-duration-vertical: 0.5s;
           .search-empty, .search-no-results {
             .hint {
               font-weight: bold;
+              width: 100%;
             }
           }
 
