--- a/angular/src/app/questionnaire/questionnaire.component.scss
+++ b/angular/src/app/questionnaire/questionnaire.component.scss
@@ -1,9 +1,5 @@
 @import '~styles/mixins/buttons';
 
-:host {
-  flex-grow: 1;
-}
-
 .questions-container {
   width: 100%;
   display: flex;
